<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".CustomersPhoneBillActivity">

  <TextView
    android:id="@+id/calls_list"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_marginTop="48dp"
    android:layout_weight="1"
    android:scrollbars="vertical"
    android:verticalScrollbarPosition="right"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/search_call" />

  <Button
    android:id="@+id/add_call"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="60dp"
    android:layout_marginTop="44dp"
    android:onClick="pushCallToCurrentCustomer"
    android:text="@string/add_call"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <Button
    android:id="@+id/search_call"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="44dp"
    android:text="@string/search_call"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <Button
    android:id="@+id/reset_list_view"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="44dp"
    android:layout_marginEnd="60dp"
    android:text="@string/reset"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/empty_calls_list_alert"
    android:layout_width="0dp"
    android:layout_height="103dp"
    android:text="@string/empty_call_list"
    android:textAlignment="center"
    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
    android:visibility="gone"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <ImageView
    android:id="@+id/imageView"
    android:layout_width="0dp"
    android:layout_height="9dp"
    android:layout_marginTop="132dp"
    android:contentDescription="@string/divider"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:srcCompat="@android:drawable/screen_background_dark" />

  <TextView
    android:id="@+id/calls_explained"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="74dp"
    android:layout_marginTop="12dp"
    android:layout_marginEnd="74dp"
    android:text="@string/how_calls_are"
    android:visibility="invisible"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/search_call" />

</androidx.constraintlayout.widget.ConstraintLayout>