<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".SearchCallsActivity">

  <Button
    android:id="@+id/call_info_cancel2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="72dp"
    android:layout_marginEnd="246dp"
    android:layout_marginBottom="84dp"
    android:onClick="onCancel"
    android:text="@android:string/cancel"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent" />

  <Button
    android:id="@+id/call_info_submit2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="249dp"
    android:layout_marginEnd="72dp"
    android:layout_marginBottom="84dp"
    android:onClick="onSubmit"
    android:text="@string/submit"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintStart_toStartOf="parent" />

  <EditText
    android:id="@+id/editTextTime4"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="56dp"
    android:layout_marginEnd="146dp"
    android:autofillHints=""
    android:ems="10"
    android:hint="@string/hh_mm"
    android:inputType="time"
    android:minHeight="48dp"
    android:textColorHint="#757575"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/editTextDate4"
    tools:ignore="DuplicateSpeakableTextCheck" />

  <TextView
    android:id="@+id/textView6"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="55dp"
    android:layout_marginTop="56dp"
    android:layout_marginEnd="231dp"
    android:text="@string/start_date_and_time"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView7" />

  <TextView
    android:id="@+id/textView5"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="56dp"
    android:layout_marginTop="324dp"
    android:layout_marginEnd="238dp"
    android:text="@string/end_date_and_time"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <EditText
    android:id="@+id/editTextDate3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="56dp"
    android:layout_marginTop="196dp"
    android:layout_marginEnd="145dp"
    android:autofillHints=""
    android:ems="10"
    android:hint="@string/mm_dd_yyyy"
    android:inputType="date"
    android:minHeight="48dp"
    android:textColorHint="#757575"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:ignore="DuplicateSpeakableTextCheck" />

  <EditText
    android:id="@+id/editTextTime3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="55dp"
    android:layout_marginEnd="146dp"
    android:autofillHints=""
    android:ems="10"
    android:hint="@string/hh_mm"
    android:inputType="time"
    android:minHeight="48dp"
    android:textColorHint="#757575"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/editTextDate3" />

  <Spinner
    android:id="@+id/amPMSpinner3"
    android:layout_width="102dp"
    android:layout_height="51dp"
    android:layout_marginTop="240dp"
    android:layout_marginEnd="44dp"
    android:visibility="visible"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintStart_toEndOf="@+id/editTextDate3"
    app:layout_constraintTop_toTopOf="parent"
    tools:ignore="SpeakableTextPresentCheck" />

  <EditText
    android:id="@+id/editTextDate4"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="56dp"
    android:layout_marginTop="352dp"
    android:layout_marginEnd="146dp"
    android:autofillHints=""
    android:ems="10"
    android:hint="@string/mm_dd_yyyy"
    android:inputType="date"
    android:minHeight="48dp"
    android:textColorHint="#757575"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:ignore="DuplicateSpeakableTextCheck" />

  <TextView
    android:id="@+id/textView7"
    android:layout_width="297dp"
    android:layout_height="51dp"
    android:layout_marginStart="57dp"
    android:layout_marginTop="64dp"
    android:layout_marginEnd="57dp"
    android:text="@string/search_tip"
    android:textAlignment="center"
    android:textSize="20sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <Spinner
    android:id="@+id/amPMSpinner4"
    android:layout_width="102dp"
    android:layout_height="50dp"
    android:layout_marginStart="265dp"
    android:layout_marginTop="396dp"
    android:layout_marginEnd="44dp"
    android:visibility="visible"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>